<resources>
    <string name="app_name">My Restaurant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tavern">Tavern</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="title">Add To Chart</string>
    <string name="todo">TODO</string>
    <string name="tool">textview</string>
    <string name="tool1">textview</string>
    <string name="button">Top Up</string>
    <string name="textnominal">Masukkan Nominal</string>
    <string name="masukkan_nominal">Masukkan Nominal</string>
    <string name="top_up">Top Up</string>
    <string name="query_search_View">Mau pesen makanan apa ..</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="menu_1">menu_1</string>
    <string name="menu_2">menu_2</string>
    <string name="hallo_kyai_rony">Hallo, Kyai Rony!</string>
    <string name="saldo_kamu">Saldo kamu sekarang</string>
    <string name="money_home">Rp 310.000</string>
    <string name="kategori">Kategori</string>
    <string name="choose_your_food">Ayoo pilih kategori makananmu sekarang juga!</string>
    <string name="food_billing">Mau pesen makanan apa ..</string>
    <string name="beef_steak">Beef Steak</string>
    <string name="beef_with_potato_sauce">Beef with potato sauce</string>
    <string name="money_beef_steak">Rp 120.000</string>
</resources>
