<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.IntroActivity"
    android:background="#ffff">
    <LinearLayout
        android:id="@+id/linear_layout_skip"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="#ffff"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_viewpager"
        app:layout_constraintVertical_bias="0.673">

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="93dp"
            android:layout_height="45dp"
            android:background="#ffff"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/gradient_start_color"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_get_started"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="#ffff"
        android:gravity="end"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_viewpager"
        app:layout_constraintVertical_bias="0.673">

        <Button
            android:id="@+id/btn_get_started"
            android:layout_width="93dp"
            android:layout_height="45dp"
            android:background="#ffff"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/gradient_start_color"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_prev"
        android:layout_width="107dp"
        android:layout_height="46dp"
        android:background="#ffff"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_viewpager"
        app:layout_constraintVertical_bias="0.609">

        <Button
            android:id="@+id/btn_prev"
            android:layout_width="93dp"
            android:layout_height="45dp"
            android:background="#ffff"
            android:text="@string/prev"
            android:textAllCaps="false"
            android:textColor="@color/gradient_start_color"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/screen_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tab_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_indicator"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/linear_layout_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_viewpager"
        app:tabBackground="@drawable/indicator_selector"
        app:tabIndicatorHeight="0dp"
        app:tabPaddingStart="16dp">

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>